--- a/10-functions/tasks.js.ipynb
+++ b/10-functions/tasks.js.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -51,11 +51,11 @@
     }
    ],
    "source": [
-    "console.assert(reverseString('a') === 'a', 'Case 1 Failed');\n",
-    "console.assert(reverseString('ab') === 'ba', 'Case 2 Failed');\n",
-    "console.assert(reverseString('hello') === 'olleh', 'Case 3 Failed');\n",
-    "console.assert(reverseString('hello world') === 'dlrow olleh', 'Case 4 Failed');\n",
-    "console.assert(reverseString('') === '', 'Case 5 Failed');\n",
+    "console.assert(reverseString('a') === 'a', 'Case 1');\n",
+    "console.assert(reverseString('ab') === 'ba', 'Case 2');\n",
+    "console.assert(reverseString('hello') === 'olleh', 'Case 3');\n",
+    "console.assert(reverseString('hello world') === 'dlrow olleh', 'Case 4');\n",
+    "console.assert(reverseString('') === '', 'Case 5');\n",
     "console.log('All tests passed ✅');\n"
    ]
   },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,27 +83,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Cannot read properties of undefined (reading 'toUpperCase')",
-     "output_type": "error",
-     "traceback": [
-      "Stack trace:",
-      "TypeError: Cannot read properties of undefined (reading 'toUpperCase')",
-      "    at capitalizeFirstLetter (<anonymous>:2:17)",
-      "    at <anonymous>:5:16"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All tests passed ✅\n"
      ]
     }
    ],
    "source": [
-    "console.assert(capitalizeFirstLetter('hello') === 'Hello', 'Case 1 Failed');\n",
-    "console.assert(capitalizeFirstLetter('HELLO') === 'Hello', 'Case 2 Failed');\n",
-    "console.assert(capitalizeFirstLetter('hELLo') === 'Hello', 'Case 3 Failed');\n",
-    "console.assert(capitalizeFirstLetter('h') === 'H', 'Case 4 Failed');\n",
-    "console.assert(capitalizeFirstLetter('') === '', 'Case 5 Failed');\n",
+    "console.assert(capitalizeFirstLetter('hello') === 'Hello', 'Case 1');\n",
+    "console.assert(capitalizeFirstLetter('HELLO') === 'Hello', 'Case 2');\n",
+    "console.assert(capitalizeFirstLetter('hELLo') === 'Hello', 'Case 3');\n",
+    "console.assert(capitalizeFirstLetter('h') === 'H', 'Case 4');\n",
     "console.log('All tests passed ✅');\n"
    ]
   },
@@ -121,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -144,10 +139,12 @@
     }
    ],
    "source": [
-    "console.assert(sortStringAlphabetically('banana') === 'aaabnn');\n",
-    "console.assert(sortStringAlphabetically('apple') === 'aelpp');\n",
-    "console.assert(sortStringAlphabetically('hello') === 'ehllo');\n",
-    "console.assert(sortStringAlphabetically('zyxw') === 'wxyz');\n",
+    "console.assert(sortStringAlphabetically('banana') === 'aaabnn', 'Case 1');\n",
+    "console.assert(sortStringAlphabetically('aPple') === 'Paelp', 'Case 2');\n",
+    "console.assert(sortStringAlphabetically('ZyWx') === 'WZxy', 'Case 3');\n",
+    "console.assert(sortStringAlphabetically('15432') === '12345', 'Case 4');\n",
+    "console.assert(sortStringAlphabetically('a1b2c3') === '123abc', 'Case 5');\n",
+    "console.assert(sortStringAlphabetically('hello world') === ' dehllloorw', 'Case 6');\n",
     "console.log('All tests passed ✅');\n"
    ]
   },
@@ -165,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -197,8 +194,8 @@
    "source": [
     "console.assert(countVowels('hello') === 2);\n",
     "console.assert(countVowels('aeiou') === 5);\n",
-    "console.assert(countVowels('apple') === 2);\n",
-    "console.assert(countVowels('bcdfgh') === 0);\n",
+    "console.assert(countVowels('AEIOU') === 5);\n",
+    "console.assert(countVowels('try') === 0);\n",
     "console.log('All tests passed ✅');\n"
    ]
   },
@@ -215,18 +212,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "function sumOfNumbers(arr) {\n",
-    "  return arr.reduce((sum, num) => sum + num, 0);\n",
+    "  let acc = 0; // accumulator (total)\n",
+    "  for (let num of arr) {\n",
+    "    acc += num;\n",
+    "  }\n",
+    "  return acc;\n",
     "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function sumOfNumbers(arr) {\n",
+    "  // the second parameter of the reduce method (0) is the initial value of the accumulator\n",
+    "  return arr.reduce((acc, num) => acc + num, 0);\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +270,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function findMax(arr) {\n",
+    "  let max = arr[0];\n",
+    "  for (let i = 1; i < arr.length; i++) {\n",
+    "    if (arr[i] > max) {\n",
+    "      max = arr[i];\n",
+    "    }\n",
+    "  }\n",
+    "  return max;\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -386,9 +416,9 @@
    ],
    "source": [
     "console.assert(getFileType('example.jpg') === \"It's image file\");\n",
-    "console.assert(getFileType('MOVIE.MP4') === \"It's video file\");\n",
-    "console.assert(getFileType('REPORT.DOCX') === \"It's document file\");\n",
-    "console.assert(getFileType('UNKNOWN.XYZ') === \"It's unknown file\");\n",
+    "console.assert(getFileType('movie.MP4') === \"It's video file\");\n",
+    "console.assert(getFileType('REPORT.docx') === \"It's document file\");\n",
+    "console.assert(getFileType('unknown.XYZ') === \"It's unknown file\");\n",
     "console.log('All tests passed ✅');\n"
    ]
   },
@@ -406,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
