--- a/10-functions/tasks.js.ipynb
+++ b/10-functions/tasks.js.ipynb
@@ -51,11 +51,11 @@
     }
    ],
    "source": [
-    "console.assert(reverseString('a') === 'a', 'Case 1');\n",
-    "console.assert(reverseString('ab') === 'ba', 'Case 2');\n",
-    "console.assert(reverseString('hello') === 'olleh', 'Case 3');\n",
-    "console.assert(reverseString('hello world') === 'dlrow olleh', 'Case 4');\n",
-    "console.assert(reverseString('') === '', 'Case 5');\n",
+    "console.assert(reverseString('a') === 'a', 'Case 1/5');\n",
+    "console.assert(reverseString('ab') === 'ba', 'Case 2/5');\n",
+    "console.assert(reverseString('hello') === 'olleh', 'Case 3/5');\n",
+    "console.assert(reverseString('hello world') === 'dlrow olleh', 'Case 4/5');\n",
+    "console.assert(reverseString('') === '', 'Case 5/5');\n",
     "console.log('All tests passed ✅');\n"
    ]
   },
@@ -95,10 +95,10 @@
     }
    ],
    "source": [
-    "console.assert(capitalizeFirstLetter('hello') === 'Hello', 'Case 1');\n",
-    "console.assert(capitalizeFirstLetter('HELLO') === 'Hello', 'Case 2');\n",
-    "console.assert(capitalizeFirstLetter('hELLo') === 'Hello', 'Case 3');\n",
-    "console.assert(capitalizeFirstLetter('h') === 'H', 'Case 4');\n",
+    "console.assert(capitalizeFirstLetter('hello') === 'Hello', 'Case 1/4');\n",
+    "console.assert(capitalizeFirstLetter('HELLO') === 'Hello', 'Case 2/4');\n",
+    "console.assert(capitalizeFirstLetter('hELLo') === 'Hello', 'Case 3/4');\n",
+    "console.assert(capitalizeFirstLetter('h') === 'H', 'Case 4/4');\n",
     "console.log('All tests passed ✅');\n"
    ]
   },
@@ -139,12 +139,12 @@
     }
    ],
    "source": [
-    "console.assert(sortStringAlphabetically('banana') === 'aaabnn', 'Case 1');\n",
-    "console.assert(sortStringAlphabetically('aPple') === 'Paelp', 'Case 2');\n",
-    "console.assert(sortStringAlphabetically('ZyWx') === 'WZxy', 'Case 3');\n",
-    "console.assert(sortStringAlphabetically('15432') === '12345', 'Case 4');\n",
-    "console.assert(sortStringAlphabetically('a1b2c3') === '123abc', 'Case 5');\n",
-    "console.assert(sortStringAlphabetically('hello world') === ' dehllloorw', 'Case 6');\n",
+    "console.assert(sortStringAlphabetically('banana') === 'aaabnn', 'Case 1/6');\n",
+    "console.assert(sortStringAlphabetically('aPple') === 'Paelp', 'Case 2/6');\n",
+    "console.assert(sortStringAlphabetically('ZyWx') === 'WZxy', 'Case 3/6');\n",
+    "console.assert(sortStringAlphabetically('15432') === '12345', 'Case 4/6');\n",
+    "console.assert(sortStringAlphabetically('a1b2c3') === '123abc', 'Case 5/6');\n",
+    "console.assert(sortStringAlphabetically('hello world') === ' dehllloorw', 'Case 6/6');\n",
     "console.log('All tests passed ✅');\n"
    ]
   },
@@ -192,10 +192,10 @@
     }
    ],
    "source": [
-    "console.assert(countVowels('hello') === 2);\n",
-    "console.assert(countVowels('aeiou') === 5);\n",
-    "console.assert(countVowels('AEIOU') === 5);\n",
-    "console.assert(countVowels('try') === 0);\n",
+    "console.assert(countVowels('hello') === 2, 'Case 1/4');\n",
+    "console.assert(countVowels('aeiou') === 5, 'Case 2/4');\n",
+    "console.assert(countVowels('AEIOU') === 5, 'Case 3/4');\n",
+    "console.assert(countVowels('try') === 0, 'Case 4/4');\n",
     "console.log('All tests passed ✅');\n"
    ]
   },
@@ -251,9 +251,9 @@
     }
    ],
    "source": [
-    "console.assert(sumOfNumbers([1, 2, 3, 4, 5]) === 15);\n",
-    "console.assert(sumOfNumbers([10, 20, 30]) === 60);\n",
-    "console.assert(sumOfNumbers([1, -1, 1, -1]) === 0);\n",
+    "console.assert(sumOfNumbers([1, 2, 3, 4, 5]) === 15, 'Case 1/3');\n",
+    "console.assert(sumOfNumbers([10, 20, 30]) === 60, 'Case 2/3');\n",
+    "console.assert(sumOfNumbers([1, -1, 1, -1]) === 0, 'Case 3/3');\n",
     "console.log('All tests passed ✅');\n"
    ]
   },
@@ -310,9 +310,9 @@
     }
    ],
    "source": [
-    "console.assert(findMax([1, 2, 3, 4, 5]) === 5);\n",
-    "console.assert(findMax([10, 20, 30]) === 30);\n",
-    "console.assert(findMax([-1, -2, -3]) === -1);\n",
+    "console.assert(findMax([1, 2, 3, 4, 5]) === 5, 'Case 1/3');\n",
+    "console.assert(findMax([10, 20, 30]) === 30, 'Case 2/3');\n",
+    "console.assert(findMax([-1, -2, -3]) === -1, 'Case 3/3');\n",
     "console.log('All tests passed ✅');\n"
    ]
   },
@@ -354,9 +354,9 @@
     }
    ],
    "source": [
-    "console.assert(convertYearsToAge(1990) === 35); // Assuming current year is 2025\n",
-    "console.assert(convertYearsToAge(2000) === 25); // Assuming current year is 2025\n",
-    "console.assert(convertYearsToAge(2010) === 15); // Assuming current year is 2025\n",
+    "console.assert(convertYearsToAge(1990) === 35, 'Case 1/3'); // Assuming current year is 2025\n",
+    "console.assert(convertYearsToAge(2000) === 25, 'Case 2/3'); // Assuming current year is 2025\n",
+    "console.assert(convertYearsToAge(2010) === 15, 'Case 3/3'); // Assuming current year is 2025\n",
     "console.log('All tests passed ✅');\n"
    ]
   },
@@ -415,10 +415,10 @@
     }
    ],
    "source": [
-    "console.assert(getFileType('example.jpg') === \"It's image file\");\n",
-    "console.assert(getFileType('movie.MP4') === \"It's video file\");\n",
-    "console.assert(getFileType('REPORT.docx') === \"It's document file\");\n",
-    "console.assert(getFileType('unknown.XYZ') === \"It's unknown file\");\n",
+    "console.assert(getFileType('example.jpg') === \"It's image file\", 'Case 1/4');\n",
+    "console.assert(getFileType('movie.MP4') === \"It's video file\", 'Case 2/4');\n",
+    "console.assert(getFileType('REPORT.docx') === \"It's document file\", 'Case 3/4');\n",
+    "console.assert(getFileType('unknown.XYZ') === \"It's unknown file\", 'Case 4/4');\n",
     "console.log('All tests passed ✅');\n"
    ]
   },
@@ -482,16 +482,16 @@
    ],
    "source": [
     "console.assert(\n",
-    "  getTimeMessage('2025-01-26T10:45:00') === \"Today is Sunday. It's 10:45 AM. It's morning.\"\n",
+    "  getTimeMessage('2025-01-26T10:45:00') === \"Today is Sunday. It's 10:45 AM. It's morning.\", 'Case 1/4'\n",
     ");\n",
     "console.assert(\n",
-    "  getTimeMessage('2025-01-26T15:30:00') === \"Today is Sunday. It's 3:30 PM. It's afternoon.\"\n",
+    "  getTimeMessage('2025-01-26T15:30:00') === \"Today is Sunday. It's 3:30 PM. It's afternoon.\", 'Case 2/4'\n",
     ");\n",
     "console.assert(\n",
-    "  getTimeMessage('2025-01-27T21:15:00') === \"Today is Monday. It's 9:15 PM. It's evening.\"\n",
+    "  getTimeMessage('2025-01-27T21:15:00') === \"Today is Monday. It's 9:15 PM. It's evening.\", 'Case 3/4'\n",
     ");\n",
     "console.assert(\n",
-    "  getTimeMessage('2025-01-27T23:00:00') === \"Today is Monday. It's 11:00 PM. It's night.\"\n",
+    "  getTimeMessage('2025-01-27T23:00:00') === \"Today is Monday. It's 11:00 PM. It's night.\", 'Case 4/4'\n",
     ");\n",
     "console.log('All tests passed ✅');\n"
    ]
@@ -540,7 +540,8 @@
    "source": [
     "console.assert(\n",
     "  JSON.stringify(getYearsWithSundayOnJanuaryFirst()) ===\n",
-    "    JSON.stringify([2006, 2012, 2017, 2023, 2034, 2040, 2045])\n",
+    "    JSON.stringify([2006, 2012, 2017, 2023, 2034, 2040, 2045]),\n",
+    "  'Case 1/1'\n",
     ");\n",
     "console.log('All tests passed ✅');\n"
    ]
