--- a/10-functions/tasks.js.ipynb
+++ b/10-functions/tasks.js.ipynb
@@ -13,33 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "function reverseString(str) {\n",
-    "  let reversedStr = '';\n",
-    "  for (let i = str.length - 1; i >= 0; i--) {\n",
-    "    reversedStr += str[i];\n",
-    "  }\n",
-    "  return reversedStr;\n",
-    "}\n"
+    "import { reverseString } from './solutions.js';\n",
+    "import { reverseString2 } from './solutions.js';\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "function reverseString(str) {\n",
-    "  return str.split('').reverse().join('');\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -72,18 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "function capitalizeFirstLetter(str) {\n",
-    "  return str[0].toUpperCase() + str.slice(1).toLowerCase();\n",
-    "}\n"
+    "import { capitalizeFirstLetter } from './solutions.js';\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -116,18 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "function sortStringAlphabetically(str) {\n",
-    "  return str.split('').sort().join('');\n",
-    "}\n"
+    "import { sortStringAlphabetically } from './solutions.js';\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -162,25 +142,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "function countVowels(str) {\n",
-    "  const vowels = 'aeiouAEIOU';\n",
-    "  let count = 0;\n",
-    "  for (let char of str) {\n",
-    "    if (vowels.includes(char)) {\n",
-    "      count++;\n",
-    "    }\n",
-    "  }\n",
-    "  return count;\n",
-    "}\n"
+    "import { countVowels } from './solutions.js';\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -212,34 +183,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "function sumOfNumbers(arr) {\n",
-    "  let acc = 0; // accumulator (total)\n",
-    "  for (let num of arr) {\n",
-    "    acc += num;\n",
-    "  }\n",
-    "  return acc;\n",
-    "}\n"
+    "import { sumOfNumbers } from './solutions.js';\n",
+    "import { sumOfNumbers2 } from './solutions.js';\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "function sumOfNumbers(arr) {\n",
-    "  // the second parameter of the reduce method (0) is the initial value of the accumulator\n",
-    "  return arr.reduce((acc, num) => acc + num, 0);\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -270,35 +224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "function findMax(arr) {\n",
-    "  let max = arr[0];\n",
-    "  for (let i = 1; i < arr.length; i++) {\n",
-    "    if (arr[i] > max) {\n",
-    "      max = arr[i];\n",
-    "    }\n",
-    "  }\n",
-    "  return max;\n",
-    "}\n"
+    "import { findMax } from './solutions.js';\n",
+    "import { findMax2 } from './solutions.js';\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "function findMax(arr) {\n",
-    "  return Math.max(...arr);\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -330,19 +266,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "function convertYearsToAge(yearOfBirth) {\n",
-    "  const currentYear = new Date().getFullYear();\n",
-    "  return currentYear - yearOfBirth;\n",
-    "}\n"
+    "import { convertYearsToAge } from './solutions.js';\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -383,27 +316,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "function getFileType(fileName) {\n",
-    "  const imageExtensions = ['jpg', 'png', 'gif', 'bmp', 'jpeg'];\n",
-    "  const videoExtensions = ['mp4', 'avi', 'mov', 'mkv', 'flv'];\n",
-    "  const documentExtensions = ['docx', 'pdf', 'txt', 'pptx', 'xlsx'];\n",
-    "\n",
-    "  const extension = fileName.split('.').pop().toLowerCase();\n",
-    "\n",
-    "  if (imageExtensions.includes(extension)) return \"It's image file\";\n",
-    "  if (videoExtensions.includes(extension)) return \"It's video file\";\n",
-    "  if (documentExtensions.includes(extension)) return \"It's document file\";\n",
-    "  return \"It's unknown file\";\n",
-    "}\n"
+    "import { getFileType } from './solutions.js';\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -426,50 +348,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Task 9: Get Time Message\n",
+    "### Task 1: Get Time Message\n",
     "\n",
     "Write a function `getTimeMessage(isoString)` that:\n",
     "\n",
     "- Takes an ISO date string (`YYYY-MM-DDTHH:MM:SS`).\n",
-    "**Hint:** Use `new Date(isoString)` to create a Date object."
+    "- Returns a string like:  \n",
+    "  `\"Today is Sunday. It's 10:45 AM. It's morning/afternoon/evening/night.\"`\n",
+    "\n",
+    "**Hint:** Use `new Date(isoString)` to create a Date object.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "function getTimeMessage(isoString) {\n",
-    "  const date = new Date(isoString);\n",
-    "\n",
-    "  const days = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];\n",
-    "  const hours = date.getHours();\n",
-    "  const minutes = date.getMinutes();\n",
-    "  const day = days[date.getDay()];\n",
-    "\n",
-    "  const formattedHours = hours % 12 === 0 ? 12 : hours % 12;\n",
-    "  const period = hours >= 12 ? 'PM' : 'AM';\n",
-    "  const formattedMinutes = minutes.toString().padStart(2, '0');\n",
-    "\n",
-    "  let timeOfDay;\n",
-    "  if (hours >= 6 && hours < 12) {\n",
-    "    timeOfDay = 'morning';\n",
-    "  } else if (hours >= 12 && hours < 18) {\n",
-    "    timeOfDay = 'afternoon';\n",
-    "  } else if (hours >= 18 && hours < 22) {\n",
-    "    timeOfDay = 'evening';\n",
-    "  } else {\n",
-    "    timeOfDay = 'night';\n",
-    "  }\n",
-    "\n",
-    "  return `Today is ${day}. It's ${formattedHours}:${formattedMinutes} ${period}. It's ${timeOfDay}.`;\n",
-    "}\n"
+    "import { getTimeMessage } from './solutions.js';\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -482,16 +383,20 @@
    ],
    "source": [
     "console.assert(\n",
-    "  getTimeMessage('2025-01-26T10:45:00') === \"Today is Sunday. It's 10:45 AM. It's morning.\", 'Case 1/4'\n",
+    "  getTimeMessage('2025-01-26T10:45:00') === \"Today is Sunday. It's 10:45 AM. It's morning.\",\n",
+    "  'Case 1/4'\n",
     ");\n",
     "console.assert(\n",
-    "  getTimeMessage('2025-01-26T15:30:00') === \"Today is Sunday. It's 3:30 PM. It's afternoon.\", 'Case 2/4'\n",
+    "  getTimeMessage('2025-01-26T15:30:00') === \"Today is Sunday. It's 3:30 PM. It's afternoon.\",\n",
+    "  'Case 2/4'\n",
     ");\n",
     "console.assert(\n",
-    "  getTimeMessage('2025-01-27T21:15:00') === \"Today is Monday. It's 9:15 PM. It's evening.\", 'Case 3/4'\n",
+    "  getTimeMessage('2025-01-27T21:15:00') === \"Today is Monday. It's 9:15 PM. It's evening.\",\n",
+    "  'Case 3/4'\n",
     ");\n",
     "console.assert(\n",
-    "  getTimeMessage('2025-01-27T23:00:00') === \"Today is Monday. It's 11:00 PM. It's night.\", 'Case 4/4'\n",
+    "  getTimeMessage('2025-01-27T23:00:00') === \"Today is Monday. It's 11:00 PM. It's night.\",\n",
+    "  'Case 4/4'\n",
     ");\n",
     "console.log('All tests passed ✅');\n"
    ]
@@ -510,23 +415,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "function getYearsWithSundayOnJanuaryFirst() {\n",
-    "  const sundayYears = [];\n",
-    "  for (let year = 2000; year <= 2050; year++) {\n",
-    "    const date = new Date(`${year}-01-01`);\n",
-    "    if (date.getDay() === 0) sundayYears.push(year);\n",
-    "  }\n",
-    "  return sundayYears;\n",
-    "}\n"
+    "import { getYearsWithSundayOnJanuaryFirst } from './solutions.js';\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -539,9 +437,20 @@
    ],
    "source": [
     "console.assert(\n",
-    "  JSON.stringify(getYearsWithSundayOnJanuaryFirst()) ===\n",
-    "    JSON.stringify([2006, 2012, 2017, 2023, 2034, 2040, 2045]),\n",
-    "  'Case 1/1'\n",
+    "  getTimeMessage('2025-01-26T10:45:00') === \"Today is Sunday. It's 10:45 AM. It's morning.\",\n",
+    "  'Case 1/4'\n",
+    ");\n",
+    "console.assert(\n",
+    "  getTimeMessage('2025-01-26T15:30:00') === \"Today is Sunday. It's 3:30 PM. It's afternoon.\",\n",
+    "  'Case 2/4'\n",
+    ");\n",
+    "console.assert(\n",
+    "  getTimeMessage('2025-01-27T21:15:00') === \"Today is Monday. It's 9:15 PM. It's evening.\",\n",
+    "  'Case 3/4'\n",
+    ");\n",
+    "console.assert(\n",
+    "  getTimeMessage('2025-01-27T23:00:00') === \"Today is Monday. It's 11:00 PM. It's night.\",\n",
+    "  'Case 4/4'\n",
     ");\n",
     "console.log('All tests passed ✅');\n"
    ]
