job-promises-params

--- a/week-5/demo.js.ipynb
+++ b/week-5/demo.js.ipynb
@@ -505,6 +505,119 @@
     "console.log(generator1.next());\n",
     "console.log(generator2.next());\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[33m30\u001b[39m"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function add(a, b) {\n",
+    "  return a + b;\n",
+    "}\n",
+    "\n",
+    "add(10, 20);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello 190\n"
+     ]
+    }
+   ],
+   "source": [
+    "function greet(something) {\n",
+    "  console.log(`hello ${something}`);\n",
+    "}\n",
+    "\n",
+    "function add(a, b) {\n",
+    "  return a + b;\n",
+    "}\n",
+    "\n",
+    "greet(add(100, 90));\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "let something = setTimeout();\n",
+    "\n",
+    "console.log(something);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Promise resolver 1 is not a function",
+     "output_type": "error",
+     "traceback": [
+      "Stack trace:",
+      "TypeError: Promise resolver 1 is not a function",
+      "    at new Promise (<anonymous>)",
+      "    at <anonymous>:1:22"
+     ]
+    }
+   ],
+   "source": [
+    "new Promise(1);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Promise { \u001b[36m<pending>\u001b[39m }"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new Promise((resolve, reject) => {\n",
+    "  setTimeout(() => {\n",
+    "    resolve();\n",
+    "  }, 2000);\n",
+    "});\n"
+   ]
   }
  ],
  "metadata": {
