--- a/week-5/demo.js.ipynb
+++ b/week-5/demo.js.ipynb
@@ -618,6 +618,31 @@
     "  }, 2000);\n",
     "});\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "undefined\n"
+     ]
+    }
+   ],
+   "source": [
+    "function add(a, b) {\n",
+    "  a + b;\n",
+    "  // return a + b;\n",
+    "  // return 'hello vidu, this is a beautiful day';\n",
+    "}\n",
+    "\n",
+    "let something = add(10, 20);\n",
+    "\n",
+    "console.log(something);\n"
+   ]
   }
  ],
  "metadata": {
