--- a/test.js.ipynb
+++ b/test.js.ipynb
@@ -20,6 +20,42 @@
     "  console.log('BOOM');\n",
     "}\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{\n",
+       "  \u001b[32m\"0\"\u001b[39m: { text: \u001b[32m\"eat apple\"\u001b[39m, isDone: \u001b[33mfalse\u001b[39m, isStar: \u001b[33mfalse\u001b[39m },\n",
+       "  \u001b[32m\"1\"\u001b[39m: { text: \u001b[32m\"eat banana\"\u001b[39m, isDone: \u001b[33mfalse\u001b[39m, isStar: \u001b[33mfalse\u001b[39m },\n",
+       "  \u001b[32m\"2\"\u001b[39m: { text: \u001b[32m\"eat kiwi\"\u001b[39m, isDone: \u001b[33mfalse\u001b[39m, isStar: \u001b[33mfalse\u001b[39m }\n",
+       "}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "let todos = {};\n",
+    "let count = 0;\n",
+    "\n",
+    "function addTodo(text) {\n",
+    "  todos[count] = { text: text, isDone: false, isStar: false };\n",
+    "  count++;\n",
+    "}\n",
+    "\n",
+    "addTodo('eat apple');\n",
+    "addTodo('eat banana');\n",
+    "addTodo('eat kiwi');\n",
+    "\n",
+    "todos;\n"
+   ]
   }
  ],
  "metadata": {
