todo, local storage

--- a/test.js.ipynb
+++ b/test.js.ipynb
@@ -56,6 +56,52 @@
     "\n",
     "todos;\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32m'{\"salary\":10000,\"age\":22,\"home\":\"hbh\"}'\u001b[39m"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "let obj = {\n",
+    "  salary: 10000,\n",
+    "  age: 22,\n",
+    "  home: 'hbh',\n",
+    "};\n",
+    "\n",
+    "JSON.stringify(obj);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ salary: \u001b[33m10000\u001b[39m, age: \u001b[33m22\u001b[39m, home: \u001b[32m\"hbh\"\u001b[39m }"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "JSON.parse('{\"salary\":10000,\"age\":22,\"home\":\"hbh\"}');\n"
+   ]
   }
  ],
  "metadata": {
