todo vue flask done 💚

--- a/test.js.ipynb
+++ b/test.js.ipynb
@@ -102,6 +102,63 @@
    "source": [
     "JSON.parse('{\"salary\":10000,\"age\":22,\"home\":\"hbh\"}');\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "let todos = [\n",
+    "  { id: 15, text: 'eat apple', isDone: false },\n",
+    "  { id: 17, text: 'eat apple', isDone: false },\n",
+    "  { id: 25, text: 'eat apple', isDone: false },\n",
+    "];\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ id: \u001b[33m17\u001b[39m, text: \u001b[32m\"eat apple\"\u001b[39m, isDone: \u001b[33mtrue\u001b[39m }"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "todos[1] = { id: 17, text: 'eat apple', isDone: true };\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\n",
+       "  { id: \u001b[33m15\u001b[39m, text: \u001b[32m\"eat apple\"\u001b[39m, isDone: \u001b[33mtrue\u001b[39m },\n",
+       "  { id: \u001b[33m17\u001b[39m, text: \u001b[32m\"eat apple\"\u001b[39m, isDone: \u001b[33mtrue\u001b[39m },\n",
+       "  { id: \u001b[33m25\u001b[39m, text: \u001b[32m\"eat apple\"\u001b[39m, isDone: \u001b[33mfalse\u001b[39m }\n",
+       "]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "todos;\n"
+   ]
   }
  ],
  "metadata": {
