--- a/end-term/demo.js.ipynb
+++ b/end-term/demo.js.ipynb
@@ -47,6 +47,124 @@
     "\n",
     "welcomeToJapan('Vishnu');\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a06e9de",
+   "metadata": {},
+   "source": [
+    "- call(context, ...argsArr)\n",
+    "- apply(context, argsArr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e12b072e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John Doe\n",
+      "Jane Smith\n",
+      "Jane Smith\n"
+     ]
+    }
+   ],
+   "source": [
+    "const person = {\n",
+    "  firstName: 'John',\n",
+    "  lastName: 'Doe',\n",
+    "  fullName: function () {\n",
+    "    return `${this.firstName} ${this.lastName}`;\n",
+    "  },\n",
+    "};\n",
+    "\n",
+    "console.log(person.fullName());\n",
+    "console.log(person.fullName.call({ firstName: 'Jane', lastName: 'Smith' }, 10, 20));\n",
+    "console.log(person.fullName.apply({ firstName: 'Jane', lastName: 'Smith' }, [10, 20]));\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "edc68d26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John Doe\n",
+      "Jane Smith\n"
+     ]
+    }
+   ],
+   "source": [
+    "const person = {\n",
+    "  firstName: 'John',\n",
+    "  lastName: 'Doe',\n",
+    "  fullName: function () {\n",
+    "    return `${this.firstName} ${this.lastName}`;\n",
+    "  },\n",
+    "};\n",
+    "\n",
+    "console.log(person.fullName());\n",
+    "\n",
+    "const fullNameBound = person.fullName.bind({ firstName: 'Jane', lastName: 'Smith' });\n",
+    "console.log(fullNameBound());\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "be4eb3eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[33mNaN\u001b[39m"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "undefined + undefined;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8b610a25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ principal: \u001b[33m0\u001b[39m, rate: \u001b[33m0\u001b[39m, time: \u001b[33m0\u001b[39m, finalAmount: \u001b[33mNaN\u001b[39m }"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "const obj = {\n",
+    "  principal: 0,\n",
+    "  rate: 0,\n",
+    "  time: 0,\n",
+    "  finalAmount: this.principal + this.rate,\n",
+    "};\n",
+    "\n",
+    "obj;\n"
+   ]
   }
  ],
  "metadata": {
