--- a/end-term/demo.js.ipynb
+++ b/end-term/demo.js.ipynb
@@ -165,6 +165,163 @@
     "\n",
     "obj;\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4c2789a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ name: \"paru\", age: 22, salary: 10000 }\n",
+      "{ name: \"paru\", age: 22, salary: 10000 }\n",
+      "true\n"
+     ]
+    }
+   ],
+   "source": [
+    "let student1 = {\n",
+    "  name: 'vidu',\n",
+    "  age: 22,\n",
+    "  salary: 10000,\n",
+    "};\n",
+    "\n",
+    "let student2 = student1;\n",
+    "\n",
+    "student1.name = 'paru';\n",
+    "\n",
+    "console.log(student1);\n",
+    "console.log(student2);\n",
+    "console.log(student1 === student2);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "60a77804",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ name: \"paru\", age: 22, salary: 10000 }\n",
+      "{ name: \"vidu\", age: 22, salary: 10000 }\n",
+      "false\n"
+     ]
+    }
+   ],
+   "source": [
+    "let student1 = {\n",
+    "  name: 'vidu',\n",
+    "  age: 22,\n",
+    "  salary: 10000,\n",
+    "};\n",
+    "\n",
+    "let student2 = {\n",
+    "  name: 'vidu',\n",
+    "  age: 22,\n",
+    "  salary: 10000,\n",
+    "};\n",
+    "\n",
+    "student1.name = 'paru';\n",
+    "\n",
+    "console.log(student1);\n",
+    "console.log(student2);\n",
+    "console.log(student1 === student2);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "931cc286",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ name: \"paru\", age: 22, salary: 10000 }\n",
+      "{ name: \"vidu\", age: 22, salary: 10000 }\n",
+      "false\n"
+     ]
+    }
+   ],
+   "source": [
+    "let student1 = {\n",
+    "  name: 'vidu',\n",
+    "  age: 22,\n",
+    "  salary: 10000,\n",
+    "};\n",
+    "\n",
+    "let student2 = { ...student1 };\n",
+    "\n",
+    "student1.name = 'paru';\n",
+    "\n",
+    "console.log(student1);\n",
+    "console.log(student2);\n",
+    "console.log(student1 === student2);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "daccfed0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vijayanagara hbh\n",
+      "vijayanagara hbh\n",
+      "indore xyz\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[33mtrue\u001b[39m"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "let student = {\n",
+    "  name: 'vidu',\n",
+    "  age: 20,\n",
+    "  address: {\n",
+    "    city: 'vijayanagara',\n",
+    "    village: 'hbh',\n",
+    "    printAddressInfo() {\n",
+    "      console.log(this.city, this.village);\n",
+    "    },\n",
+    "  },\n",
+    "};\n",
+    "\n",
+    "student.address.printAddressInfo(); // works\n",
+    "\n",
+    "let coolAddress = student.address;\n",
+    "\n",
+    "coolAddress.printAddressInfo(); // works\n",
+    "\n",
+    "let coolFunc = student.address.printAddressInfo;\n",
+    "\n",
+    "// coolFunc(); // fails\n",
+    "\n",
+    "coolFunc.call({\n",
+    "  city: 'indore',\n",
+    "  village: 'xyz',\n",
+    "}); // calling with context\n",
+    "\n",
+    "coolAddress === student.address;\n"
+   ]
   }
  ],
  "metadata": {
